--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.url=jdbc:mysql://localhost:3306/house_financial?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
+
+#set below properties
 spring.datasource.username=ID
 spring.datasource.password=PWD
 
